--- a/Packages/com.enderlook.threading/package.json
+++ b/Packages/com.enderlook.threading/package.json
@@ -1,9 +1,10 @@
 {
   "name": "com.enderlook.threading",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "displayName": "Enderlook Threading",
   "description": "https://github.com/Enderlook/Net-Reflection",
   "dependencies": {
+	"com.system.runtime.compiler_services.unsafe": "https://github.com/Enderlook/Unity-Net-Packages.git?path=Packages/com.runtime.compiler_services.unsafe#com.runtime.compiler_services.unsafe/v4.5.3"
   },
   "keywords": [
   ],
