--- a/Packages/com.enderlook.state_machine/package.json
+++ b/Packages/com.enderlook.state_machine/package.json
@@ -1,9 +1,11 @@
 {
   "name": "com.enderlook.state_machine",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "displayName": "Enderlook State Machine",
   "description": "https://github.com/Enderlook/Net-State-Machine",
   "dependencies": {
+	  "com.system.runtime.compiler_services.unsafe": "https://github.com/Enderlook/Unity-Net-Packages.git?path=Packages/com.runtime.compiler_services.unsafe#com.runtime.compiler_services.unsafe/v4.5.3",
+	  "com.system.memory": "https://github.com/Enderlook/Unity-Net-Packages.git?path=Packages/com.system.memory#com.system.memory/v4.5.4"
   },
   "keywords": [
   ],
